ANW-2269 update docker docs